
5.2a3 -> 5.2a4:
    - jbj: yaml: add build scriptlet tags for --yaml/--xml display.
    - jbj: yaml: permit --without-syck, add some mac os x AutoFu/gcc fiddle-ups.
    - jbj: yaml: add lsyck lua module to parse YAML.
    - jbj: yaml: mix syck into the misc melange ...
    - jbj: misc: get rid of splitFoo prototypes, bury the last use in rpmfi.c.
    - jbj: PCRE in -lrpmmisc, LUA in -lrpmio linking -lrpmmisc, instead.
    - jbj: fix: --noscripts/--nofdigests/--nocontexts need to use popt callback.
    - jbj: rpmiob: fix: return iob to _rpmiobPool instead.
    - jbj: yarn: convert mire to usage mutex with refcounts
	(unifying array <-> element mutexes by copying use/pool
	pointers throughout the array).
    - jbj: rpmku: rework rpmiob handling to avoid extra malloc's.
    - jbj: rpmiob: fix: add a newref in rpmiobNew.
    - jbj: yarn: convert rpmiob to usage mutex with refcounts.
    - rse: add RPM Lua function rpm.hostname()
    - jbj: fix: handle ./../foo paths correctly (#491388).
    - jbj: rpmlib: rescusitate splint annotations.
    - jbj: rpmdb: rescusitate splint annotations.
    - jbj: rpmtsOrder: fully enable parentdir deps when ordering.
    - jbj: EVRtuple: fix: dig out the one time mire allocation leak.
    - jbj: use rpmioFreePoolItem for rpmds, eliminate rpmdsFree.
    - jbj: finish up using rpmioFreePoolItem() for rpmts and Header objects.
    - devzero2000: continuing for refcount rewrite : add define of fooFree to rpmioFreePoolItem
    - devzero2000: begin change programming style for refcount : rpmtsFree and headerFree
    - jbj: rpmio: rescusitate splint annotations.
    - jbj: getdate: ignore internalState changes.
    - jbj: poptIO: add --htdebug.
    - jbj: yarn: convert rpmfc to usage mutex with refcounts.
    - jbj: yarn: convert hashTable to usage mutex with refcounts.
    - jbj: yarn: convert rpmmg to usage mutex with refcounts.
    - jbj: yarn: convert rpmwf refcount to usage mutex.